# fastapi-pg-websocket

./: .env.dev  .env.test  .gitignore  .testgen.lua  Dockerfile  Makefile  README.md  docker-compose-all.yml  docker-compose-test.yml  docker-compose.yml  init.sql  logging.dev.yml  logging.test.yml  pyproject.toml
frontend/: Dockerfile
frontend/client/: index.html  package-lock.json  package.json  tsconfig.json
frontend/client/src/: App.tsx
frontend/server/: package-lock.json  package.json  server.ts  tsconfig.json
scripts/: random_change.py
src/alembic/: env.py
src/alembic/versions/: e35eea0aa748_add_listener_trigger.py  f9d9bb3a854f_initial.py
src/fastapi_pg_websocket/: api.py  database.py  listener.py  logging.py  main.py  orm.py  protocol.py  typing.py
src/fastapi_pg_websocket/app/: api.py  dependencies.py
tests/: conftest.py  test_api.py  test_database.py  test_listener.py
